# erl-crashdump-viewer

./: Cargo.toml  LICENSE  README.md
crashdump-db/: Cargo.toml  DESIGN.md
crashdump-db/src/: lib.rs
docs/: REST.md
src/: dump_reader.rs  extsorter.rs  lib.rs  model.rs  scanner.rs  termdecoder.rs  textstore.rs
