[workspace]
members = [".", "crashdump-db"]
resolver = "2"

[package]
name = "erl-crashdump"
version = "0.1.1"
edition = "2024"

[lib]
name = "erl_crashdump"
path = "src/lib.rs"

[[bin]]
name = "ecd"
path = "src/bin/ecd.rs"

[[bin]]
name = "ecd-server"
path = "src/bin/ecd-server.rs"

[dependencies]
crashdump-db = { path = "crashdump-db" }
zstd = "0.13"
flate2 = "1"
xz2 = "0.1"
base64 = "0.22"
tempfile = "3"
anyhow = "1"
libc = "0.2"
axum = { version = "0.8", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
maud = { version = "0.27", features = ["axum"] }
tokio-stream = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
